
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx 0.9.6.2 (rev 3403)
====================================
* [#MODX-50] stripAlias function converts named entities to their numeric equivalents and then further to their actual character.
* Fixed bad markup in language files (see http://modxcms.com/forums/index.php/topic,23353.0)
* [FS#997] Add database collation charset and database charset to System Info. (3403)
* Fix to prevent JS warning in FF with QuickEdit (3402)
* Fix installer to use multi-language based images (3401)
* Added Japanese translation/images to the installer (3400)
* Allow weblinks to have summary(introtext) fields (3390)
* Set the published status of duplicated documents to unpublished (3388)
* Update ajaxSearch to 1.7.0.2 and Search Highlighting plugin to 1.2.0.2 (3386,3387)
* Update Ditto/Reflect to version 2.1 (3377)
* [FS#988] Changed htmlspecialchars() on Search Highlighting plugin to strip_tags() (3359)
* Fix demo content error with web signup (see http://modxcms.com/forums/index.php/topic,22374.msg137890.html)
* Update IE6 (and earlier) helper files for transparent png support and for adding :hover, :active, :focus support to all elements (not just links/inputs)
* [FS#905] sqlParser.class.php now typecasting (float) instead of floatval() [PHP < 4.2] (3338)
* Updated rss.inc.php to handle 404 errors if the feeds cannot be found (3317)
* [FS#947] Module permissions did not handle multiple user groups (3314)
* [FS#977] Updated handling for apostrophes in Full Name (user/web user) and resource categories (3309)
    - Removed redundant mysql_escape_string() from the (web)users and Resources save processors 
    - Added stripslashes() to categories.inc.php getCategories() function
    - Added stripslashes() to resources.static.php 