@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx 0.9.6.2 (rev 3403)
 ====================================
+* Patches to Ditto 2.1 to fix sorting and change default docs displayed number from 3 to "all" (see http://modxcms.com/forums/index.php/topic,23204.msg146176.html#msg146176) (3511)
 * [#MODX-50] stripAlias function converts named entities to their numeric equivalents and then further to their actual character.
 * Fixed bad markup in language files (see http://modxcms.com/forums/index.php/topic,23353.0)
 * [FS#997] Add database collation charset and database charset to System Info. (3403)
